--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     margin: 0;
     padding-top: 30px;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -19,6 +20,8 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: white;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
 header ul {
@@ -53,6 +56,25 @@ header ul {
     width: 50%;
     height: 600px;
     background-color: #f9dbbe;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 100px;
+}
+
+.first_text h1 {
+    font-size: 30px;
+    font-family: 'Shippori Mincho', serif;
+}
+
+.first_text button {
+    margin-top: 50px;
+    border: 1px solid black;
+    background-color: transparent;
+    padding: 15px 40px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .second {
@@ -69,6 +91,25 @@ header ul {
     width: 50%;
     height: 600px;
     background-color: #f3ede8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 100px;
+}
+
+.second_text h1 {
+    font-size: 30px;
+    font-family: 'Shippori Mincho', serif;
+}
+
+.second_text button {
+    margin-top: 50px;
+    border: 1px solid black;
+    background-color: transparent;
+    padding: 15px 40px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .item_img {
@@ -108,6 +149,7 @@ header ul {
     background-color: white;
     border: 1px solid black;
     padding: 15px 60px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .item_price {
@@ -129,12 +171,91 @@ header ul {
 .fourth_text {
     width: 50%;
     height: 600px;
-    background-color: #f3ede8;
+    background-color: #dee8e9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 100px;
+}
+
+.fourth_text h1 {
+    font-size: 30px;
+    font-family: 'Shippori Mincho', serif;
+}
+
+.fourth_text button {
+    margin-top: 50px;
+    border: 1px solid black;
+    background-color: transparent;
+    padding: 15px 40px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.first_text button:hover,
+.second_text button:hover,
+.item_button button:hover,
+.fourth_text button:hover {
+    transition-duration: 0.5s;
+    background-color: black;
+    color: white;
+}
+
+.email {
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Shippori Mincho', serif;
 }
 
 footer {
     width: 100%;
     height: 250px;
     background-color: #f3ede8;
-    margin-top: 200px;
+    margin-top: 70px;
+}
+
+.bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 250px;
+    margin: 0 100px;
+    font-size: 11px;
+    font-family: 'Roboto', sans-serif;
+    bottom: 0;
+}
+
+.bottom ul {
+    list-style-type: none;
+    letter-spacing: 2px;
+    padding: 0;
+    line-height: 25px;
+}
+
+.footer_left {
+    padding-right: 50px;
+    border-right: 1px solid black;
+}
+
+.footer_right {
+    padding-left: 50px;
+    border-left: 1px solid black;
+}
+
+
+.footer_left,
+.footer_center,
+.footer_right {
+    width: 400px;
+}
+
+.bottom p {
+    color: gray;
+    margin-bottom: 20px;
 }
